added new supporter features

--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
               </ul>
             </div>
           </div>
+          
           <div class="feature-parent odd">
             <div class="feature-image">
               <div class="image-slider">
@@ -433,6 +434,67 @@
               </ul>
             </div>
           </div>
+          
+          <div class="feature-parent even">
+            <div class="feature-image">
+              <div class="image-slider">
+                <div class="slider" data-interval="4500">
+                  <ul class="images" style="transform: translateX(0px)">
+                    <li>
+                      <img
+                        class="slider-image feature-slider"
+                        src="../images/features/mra_search_1.png"
+                        alt="MRA Search System Screenshot 1"
+                      />
+                    </li>
+                    <li>
+                      <img
+                        class="slider-image feature-slider"
+                        src="../images/features/mra_search_2.png"
+                        alt="MRA Search System Screenshot 2"
+                      />
+                    </li>
+                    <li>
+                      <img
+                        class="slider-image feature-slider"
+                        src="../images/features/mra_search_3.png"
+                        alt="MRA Search System Screenshot 3"
+                      />
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="feature-info">
+              <h2>Music Search</h2>
+              <ul>
+                <li>Search for your favorite musics.</li>
+              </ul>
+            </div>
+          </div> 
+           <div class="feature-parent odd">
+            <div class="feature-image">
+              <div class="image-slider">
+                <div class="slider" data-interval="4500">
+                  <ul class="images" style="transform: translateX(0px)">
+                    <li>
+                      <img
+                        class="slider-image feature-slider"
+                        src="../images/features/mra_selection_1.png"
+                        alt="MRA Multi Selection Screenshot"
+                      />
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="feature-info">
+              <h2>Multi-Selection Actions</h2>
+              <ul>
+                <li>You can now orginize your playlists faster and more convinient way by selection multiple musics at once.</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section class="tiers" id="tiers">
@@ -455,6 +517,8 @@
               <li>Support me on a monthly basis</li>
               <li>Get Access to MRA Playlist Feature</li>
               <li>Get Access to MRA Backup Feature (3 slots)</li>
+              <li>Get Access to Music Search System</li>
+              <li>Get Access to multi-selection actions</li>
             </ul>
           </div>
           <div
@@ -907,11 +971,10 @@
             });
           });
         </script>
-        <h2>Thank you for downloading our app!</h2>
+        <h2>Thank you for downloading MRA!</h2>
         <span class="text"
-          >If you find it valuable, please consider supporting us by making a
-          donation. Your contribution helps us maintain and improve the app for
-          a better user experience.
+          >If you find it valuable, please consider supporting us with extra features. Your contribution helps us maintain and improve the app for
+          a better user experience. 
         </span>
         <script
           type="text/javascript"
