--- a/gift.html
+++ b/gift.html
@@ -100,6 +100,20 @@
     <div id="bg-image"></div>
     <section class="main-container" style="width: 95% !important">
       <div id="gift-contaner">
+        <style>
+          #mra-icon{
+          
+    background-image: url(images/MRA_logo_250x.png);
+    height: 250px;
+    margin: -100px 0px -50px 0px;
+    aspect-ratio: 1;
+    border: none;
+    outline: none;
+    background-repeat: no-repeat;
+    background-size: contain;
+          }
+        </style>
+        <div id="mra-icon"></div>
         <span>You have a gift!</span>
         <span id="gifts">You will get Tier 1 for 31 days!</span>
         <form id="claim_form">
