--- a/freetrial.html
+++ b/freetrial.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="You have a gift! You will have access to MRA supporter features for free!"
+      content="Claim your free trial for MRA - Music Identifier - Music Discovery"
     />
     <meta name="theme-color" content="#2657ea" />
     <meta
       name="keywords"
       content="Emircan, jadquir, Gezer, United Adobe Editor, Photoshop Splash Screen Changer, MRA, Music Recognition Application, Shazam"
     />
-    <title>MRA - Gift</title>
+    <title>MRA - Free Trail</title>
 
     <link rel="icon" type="image/png" href="images/logo_low.png" sizes="150x150">
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
@@ -98,7 +98,7 @@
       </nav>
     </header>
     <div id="bg-image"></div>
-    <section class="main-container" >
+    <section class="main-container">
       <div id="gift-contaner">
         <style>
           #mra-icon{
@@ -114,8 +114,7 @@
           }
         </style>
         <div id="mra-icon"></div>
-        <span>You have a gift!</span>
-        <span id="gifts">You will get Tier 0 for 0 days!</span>
+        <span id="gifts">Claim your free <b class="glow" style="--text-color: #7DD8FF; --glow-color:  #7DD8FF99;">Tier 2</b> trial now!</span>
         <form id="claim_form">
           <div class="textbox">
             <div class="text">Your MRA Email</div>
@@ -140,7 +139,7 @@
               align-self: center;
             "
           >
-            Claim Gift
+            Claim Free Trial
           </button>
         </form>
         <div class="progress-bar">
@@ -158,7 +157,7 @@
     <dialog id="congratulationsDialog">
       <!-- Dialog content -->
       <div class="dialog-content">
-        <p>Congratulations! You claimed the gift</p>
+        <p>Congratulations! You claimed your free trial. Please restart MRA.</p>
         <button
           class="accent colored"
           style="width: fit-content; align-self: center"
@@ -190,7 +189,7 @@
       reserved.
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="gift.js"></script>
+    <script src="freetrial.js"></script>
 
   </body>
 </html>
