--- a/404.html
+++ b/404.html
@@ -22,15 +22,15 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://jadquir.com/style/button.css"
+      href="./jadquircom/button.css"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://jadquir.com/style/common.css"
+      href=./jadquircom/common.css"
     />
     <script
-      src="https://jadquir.com/scripts/navbar.js"
+      src="./jadquircom/navbar.js"
       type="text/javascript"
       defer
     ></script>
