--- a/gift.html
+++ b/gift.html
@@ -21,20 +21,20 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://jadquir.com/style/nav.css"
+      href="./jadquircom/nav.css"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://jadquir.com/style/button.css"
+      href="./jadquircom/button.css"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://jadquir.com/style/common.css"
+      href="./jadquircom/common.css"
     />
     <script
-      src="https://jadquir.com/scripts/navbar.js"
+      src="./jadquircom/navbar.js"
       type="text/javascript"
       defer
     ></script>
