--- a/music.html
+++ b/music.html
@@ -17,10 +17,10 @@
 
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
     <link rel="stylesheet" type="text/css" href="styles/music.css" />
-    <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/nav.css" />
-    <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/button.css" />
-    <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/common.css" />
-    <script src="https://jadquir.com/scripts/navbar.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" type="text/css" href="./jadquircom/nav.css" />
+    <link rel="stylesheet" type="text/css" href="./jadquircom/button.css" />
+    <link rel="stylesheet" type="text/css" href="./jadquircom/common.css" />
+    <script src="./jadquircom/navbar.js" type="text/javascript" defer></script>
     <link rel="icon" type="image/gif/png" href="./images/logo.png" />
     <link itemprop="image" href="./images/logo.png" />
     <meta property="og:description" content="This is the song share page for MRA - Music Identifier - Music Discovery. Click the link to see the song. MRA (short for Music Recognition Application) is a music recognition application, or music identifier, like Shazam but for PC.
