--- a/callback.html
+++ b/callback.html
@@ -16,11 +16,10 @@
     <title>MRA Spotify Integration - Jadquir</title>
 
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
-    <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/nav.css" />
-    <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/button.css" />
+    <link rel="stylesheet" type="text/css" href="./jadquircom/button.css" />
     <link rel="icon" type="image/png" href="images/logo_low.png" sizes="150x150">
-    <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/common.css" />
-    <script src="https://jadquir.com/scripts/navbar.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" type="text/css" href="./jadquircom/common.css" />
+    <script src="./jadquircom/navbar.js" type="text/javascript" defer></script>
     <link rel="icon" type="image/gif/png" href="images/logo.png" />
     <link itemprop="image" href="./images/logo.png" />
     <meta property="og:description" content="MRA (short for Music Recognition Application) is a music recognition application, or music identifier, like Shazam but for PC.
