--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://jadquir.com/style/common.css"
+      href="./jadquircom/common.css"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://jadquir.com/style/button.css"
+      href="./jadquircom/button.css"
     />
     <script
-      src="https://jadquir.com/scripts/navbar.js"
+      src="./jadquircom/navbar.js"
       type="text/javascript"
       defer
     ></script>
