--- a/playlist.html
+++ b/playlist.html
@@ -17,11 +17,11 @@
 
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
     <link rel="stylesheet" type="text/css" href="styles/music.css" />
-    <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/nav.css" />
-    <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/button.css" />
-    <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/common.css" />
+    <link rel="stylesheet" type="text/css" href="./jadquircom/nav.css" />
+    <link rel="stylesheet" type="text/css" href="./jadquircom/button.css" />
+    <link rel="stylesheet" type="text/css" href="./jadquircom/common.css" />
     <link rel="icon" type="image/png" href="images/logo_low.png" sizes="150x150">
-    <script src="https://jadquir.com/scripts/navbar.js" type="text/javascript" defer></script>
+    <script src="./jadquircom/navbar.js" type="text/javascript" defer></script>
     <link rel="icon" type="image/gif/png" href="./images/logo.png" />
     <link itemprop="image" href="./images/logo.png" />
     <meta property="og:description" content="This is the playlist share page for MRA. Click the link to see the playlist. MRA (short for Music Recognition Application) is a music recognition application, or music identifier, like Shazam but for PC.">
