--- a/music/index.html
+++ b/music/index.html
@@ -17,9 +17,9 @@
 
     <link rel="stylesheet" type="text/css" href="../styles/main.css" />
     <link rel="stylesheet" type="text/css" href="../styles/music.css" />
-    <link rel="stylesheet" type="text/css" href="./jadquircom/nav.css" />
-    <link rel="stylesheet" type="text/css" href="./jadquircom/button.css" />
-    <link rel="stylesheet" type="text/css" href="./jadquircom/common.css" />
+    <link rel="stylesheet" type="text/css" href="../jadquircom/nav.css" />
+    <link rel="stylesheet" type="text/css" href="../jadquircom/button.css" />
+    <link rel="stylesheet" type="text/css" href="../jadquircom/common.css" />
     <script src="./jadquircom/navbar.js" type="text/javascript" defer></script>
     <link rel="icon" type="image/gif/png" href="../images/logo.png" />
     <link itemprop="image" href="../images/logo.png" />
